<resources>
    <string name="app_name">MeetingSchedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forward_arrow_for_months">Forward Arrow For Months</string>
    <string name="back_arrow_for_months">Back Arrow For Months</string>
    <string name="month_of_year">Month Of Year</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="time">Time</string>
    <string name="title_add">Title</string>
    <string name="start_add">Start</string>
    <string name="time_add">Time</string>
    <string name="end_add">End</string>
    <string name="add_invitee">Add Invitee</string>
    <string name="add_button">ADD</string>
    <string name="date_month">Date Month</string>
    <string name="date">Date</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_today_meetings">Delete Today Meetings</string>
    <string name="push_meetings">Push Meetings</string>
    <string name="home_bottom">Home</string>
    <string name="all_meetings_bottom">All Meetings</string>
    <string name="update_meeting">Update</string>
    <string name="add_contact">Add Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_meeting">Delete</string>
</resources>