<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:weightSum="100"
       android:orientation="horizontal">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:weightSum="100">

           <TextView
               android:id="@+id/meeting_name_id"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="50"
               android:gravity="top"
               android:text="@string/meeting_name"
               android:textSize="24sp" />


           <TextView
               android:id="@+id/meeting_date_id"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="30"
               android:gravity="bottom"
               android:text="@string/date"
               android:textSize="14sp" />

           <TextView
               android:id="@+id/meeting_time_id"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="20"
               android:gravity="bottom"
               android:text="@string/time"
               android:textSize="14sp"
               android:textStyle="italic" />

       </LinearLayout>

   </LinearLayout>

</androidx.cardview.widget.CardView>